<resources>
    <string name="app_name">ChatApp</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="are_you_a_user">Are you a user?</string>
    <string name="are_you_an_advisor">Are you an advisor?</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invalid_username_or_password">Invalid username or password!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sports_consultant">Sports consultant</string>
    <string name="it_consultant">IT consultant</string>
    <string name="car_consultant">Car consultant</string>
    <string name="more">More</string>
    <string name="bottom_sheet_holder">Bottom sheet holder</string>
    <string name="most_requested"><b>الأكثر طلب</b></string>
    <string name="frequently_contacted_consultant">Frequently contacted consultant</string>
    <string name="sample_person_1">د.سارة خالد</string>
    <string name="it">IT</string>
    <string name="sample_text_1">دكتورة في الذكاء الاصطناعي وتعلم الاله حصلت على درجة البالكوريس من جامعة سعود...للمزيد</string>
    <string name="contact">Contact</string>
    <string name="_128">(128)</string>
    <string name="title_activity_signup_userdetail">SignupUserdetailActivity</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="ask_for_your_advisor">Ask for your advisor</string>
    <string name="writing_to_your_consultant">Writing to your consultant</string>
    <string name="sample_username_umar_manzoor">عمر منصور</string>
    <string name="sample_username">\@USERNAME</string>
    <string name="full_name">Full name</string>
    <string name="sample_umar_manzoor_email">omar@gmail.com</string>
    <string name="view_all"><b>View all</b></string>
    <string name="_255">255+</string>
    <string name="payment_method"><b>Payment method</b></string>
    <string name="choose_payment_method"><b>Choose payment method</b></string>
    <string name="add_payment_method">Add payment method</string>
    <string name="active_now">Active now</string>
    <string name="write_your_message"><font size="12">Write your message</font></string>

    <string-array name="consultant_options">
        <item>Choose the type of consultant</item>
        <item>IT</item>
        <item>Sports</item>
        <item>Car</item>
    </string-array>
</resources>