<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#20a090"
    android:orientation="vertical"
    android:gravity="end"
    tools:context=".SignupUserdetailActivity">

    <ImageButton
        android:id="@+id/userDetailBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_arrow_back_24_white"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/name"
        android:textColor="@color/white"
        android:layout_marginTop="125dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="name"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/email"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/acme"
        android:text="Password"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="LabelFor"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/acme"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="LabelFor"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"/>


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/spinner_background"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/consultant_options"
            android:background="@null"
            android:fontFamily="@font/inter"
            android:padding="8dp"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_down"
            android:padding="8dp"
            android:contentDescription="TODO" />

    </LinearLayout>



    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_button_background"
        android:text="@string/sign_up"
        android:fontFamily="@font/inter"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

</LinearLayout>