<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#20a090"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/moreTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:fontFamily="@font/inter"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="40dp"
            android:paddingBottom="10dp"
            android:text="@string/more"
            android:textColor="#5B5B5B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_margin="5dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/car_consultant"
                        android:scaleType="centerCrop"
                        android:src="@drawable/no_image" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:paddingTop="18dp"
                    android:text="@string/sports_consultant"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_margin="5dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/car_consultant"
                        android:scaleType="centerCrop"
                        android:src="@drawable/no_image" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:paddingTop="18dp"
                    android:text="@string/it_consultant"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:layout_margin="5dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/car_consultant"
                        android:scaleType="centerCrop"
                        android:src="@drawable/no_image" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:paddingTop="18dp"
                    android:text="@string/car_consultant"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners">

            <!-- Your existing layout components -->

            <!-- Bottom Sheet -->
            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_remove_24_gray"
                android:contentDescription="@string/bottom_sheet_holder"/>

            <LinearLayout
                android:id="@+id/bottomSheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="8dp"
                android:orientation="vertical"
                android:visibility="visible"
                android:layout_marginTop="60dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp">

                <!-- Content of the bottom sheet goes here -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_requested"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter"
                    android:layout_marginBottom="2dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="165dp"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="#5FB0A6"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="12dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- Recently contacted person profile image -->
                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardView"
                            android:layout_width="37dp"
                            android:layout_height="37dp"
                            app:cardCornerRadius="46dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.054"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.125">

                            <!--                        <ImageView-->
                            <!--                            android:id="@+id/imageView2"-->
                            <!--                            android:layout_width="wrap_content"-->
                            <!--                            android:layout_height="wrap_content"-->
                            <!--                            android:scaleType="centerCrop"-->
                            <!--                            android:src="@drawable/no_image"-->
                            <!--                            app:layout_constraintStart_toStartOf="parent"-->
                            <!--                            app:layout_constraintTop_toTopOf="parent"-->
                            <!--                            android:contentDescription="@string/frequently_contacted_consultant" />-->

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/sample_person_1"
                            app:layout_constraintStart_toEndOf="@+id/cardView"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:text="@string/it"
                            android:textColor="#CCCCCC"
                            app:layout_constraintStart_toEndOf="@+id/cardView"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="16dp"
                            android:max="5"
                            android:numStars="5"
                            android:rating="4"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="60dp"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            android:text="@string/sample_text_1"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:layout_editor_absoluteX="0dp" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/_128"
                            android:textColor="@color/white"
                            android:textSize="11sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ratingBar" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="28dp"
                            android:layout_marginEnd="16dp"
                            android:backgroundTint="@color/white"
                            android:fontFamily="@font/inter"
                            android:minHeight="0dp"
                            android:text="@string/contact"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="11sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </FrameLayout>


    </LinearLayout>

</FrameLayout>